Add Option to display IMDb-ratings in the letterboxd format

--- a/options.html
+++ b/options.html
@@ -53,6 +53,13 @@
         </div>
     </div>
     <div>
+        <h3>IMDb</h3>
+        <div>
+            <label>Convert to Letterboxd-Style rating:</label>
+            <input type="checkbox" id="imdb-convert-rating" />
+        </div>
+    </div>
+    <div>
         <h3>Debug</h3>
         <div>
             <label>Log calls in console:</label>
