Added Letterboxd-Style ratings to MyAnimeList and Anilist

--- a/options.html
+++ b/options.html
@@ -53,10 +53,10 @@
         </div>
     </div>
     <div>
-        <h3>IMDb</h3>
+        <h3>Misc</h3>
         <div>
-            <label>Convert to Letterboxd-Style rating:</label>
-            <input type="checkbox" id="imdb-convert-rating" />
+            <label>Convert ratings to Letterboxd-Style rating:</label>
+            <input type="checkbox" id="convert-ratings" />
         </div>
     </div>
     <div>
