--- a/options.html
+++ b/options.html
@@ -24,28 +24,28 @@
         <h3>IMDb</h3>
         <div>
             <label>Display IMDb:</label>
-            <input type="checkbox" id="imdb-enabled"/>
+            <input type="checkbox" id="imdb-enabled" class="setting"/>
         </div>
     </div>
     <div>
         <h3>MyAnimeList</h3>
         <div>
             <label>Display MyAnimeList:</label>
-            <input type="checkbox" id="mal-enabled"/>
+            <input type="checkbox" id="mal-enabled" class="setting"/>
         </div>
     </div>
     <div>
         <h3>AniList</h3>
         <div>
             <label>Display AniList:</label>
-            <input type="checkbox" id="al-enabled"/>
+            <input type="checkbox" id="al-enabled" class="setting"/>
         </div>
     </div>
     <div>
         <h3>Rotten Tomatoes</h3>
         <div>
             <label>Display Rotten Tomatoes:</label>
-            <input type="checkbox" id="tomato-enabled"/>
+            <input type="checkbox" id="tomato-enabled" class="setting"/>
         </div>
         <div>
             <label>Default detail view:</label>
@@ -74,7 +74,7 @@
         <h3>Metacritic</h3>
         <div>
             <label>Display Metacritic:</label>
-            <input type="checkbox" id="metacritic-enabled"/>
+            <input type="checkbox" id="metacritic-enabled" class="setting"/>
         </div>
         <div>
             <label>Default detail view:</label>
@@ -89,14 +89,14 @@
         <h3>SensCritique</h3>
         <div>
             <label>Display SensCritique:</label>
-            <input type="checkbox" id="senscritique-enabled"/>
+            <input type="checkbox" id="senscritique-enabled" class="setting"/>
         </div>
     </div>
     <div>
         <h3>CinemaScore</h3>
         <div>
             <label>Display CinemaScore:</label>
-            <input type="checkbox" id="cinema-enabled"/>
+            <input type="checkbox" id="cinema-enabled" class="setting"/>
         </div>
     </div>
     <br>
@@ -104,7 +104,7 @@
         <h3>Search</h3>
         <div>
             <label>Default results to films:</label>
-            <input type="checkbox" id="search-redirect"/>
+            <input type="checkbox" id="search-redirect" class="setting"/>
             <p>When enabled, the Letterboxd search will default to only show results for films, rather than showing all results.</p>
         </div>
     </div>
@@ -113,7 +113,7 @@
         <h3>Misc</h3>
         <div>
             <label>Convert ratings to Letterboxd-Style rating:</label>
-            <input type="checkbox" id="convert-ratings" />
+            <input type="checkbox" id="convert-ratings" class="setting"/>
         </div>
     </div>
     <br>
