Add MPA enabled setting

--- a/options.html
+++ b/options.html
@@ -115,6 +115,10 @@
             <label>Convert ratings to Letterboxd-Style rating:</label>
             <input type="checkbox" id="convert-ratings" />
         </div>
+        <div>
+            <label>Display MPA film ratings:</label>
+            <input type="checkbox" id="mpa-enabled" />
+        </div>
     </div>
     <br>
     <div>
