--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <style>
         h3,label,p{
             margin-left: 15px;
