--- a/options.html
+++ b/options.html
@@ -94,6 +94,13 @@
         </div>
     </div>
     <div>
+        <h3>MUBI</h3>
+        <div>
+            <label>Display MUBI:</label>
+            <input type="checkbox" id="mubi-enabled"/>
+        </div>
+    </div>
+    <div>
         <h3>CinemaScore</h3>
         <div>
             <label>Display CinemaScore:</label>
