--- a/options.html
+++ b/options.html
@@ -97,7 +97,7 @@
         <h3>MUBI</h3>
         <div>
             <label>Display MUBI:</label>
-            <input type="checkbox" id="mubi-enabled"/>
+            <input type="checkbox" id="mubi-enabled" class="setting"/>
         </div>
     </div>
     <div>
