--- a/options.html
+++ b/options.html
@@ -101,6 +101,13 @@
         </div>
     </div>
     <div>
+        <h3>FilmAffinity</h3>
+        <div>
+            <label>Display FilmAffinity:</label>
+            <input type="checkbox" id="filmaff-enabled"/>
+        </div>
+    </div>
+    <div>
         <h3>CinemaScore</h3>
         <div>
             <label>Display CinemaScore:</label>
