Add option to disable boxofficemojo link

--- a/options.html
+++ b/options.html
@@ -135,6 +135,10 @@
             <label>Open 'More At' links in same tab:</label>
             <input type="checkbox" id="open-same-tab" />
         </div>
+        <div>
+            <label>Display BoxOfficeMojo link:</label>
+            <input type="checkbox" id="mojo-link-enabled" />
+        </div>
     </div>
     <br>
     <div>
