mubi and some permissions

--- a/options.html
+++ b/options.html
@@ -27,28 +27,28 @@
         <h3>IMDb</h3>
         <div>
             <label>Display IMDb:</label>
-            <input type="checkbox" id="imdb-enabled" class="setting"/>
+            <input type="checkbox" id="imdb-enabled" class="setting" permission="https://www.imdb.com/*"/>
         </div>
     </div>
     <div>
         <h3>MyAnimeList</h3>
         <div>
             <label>Display MyAnimeList:</label>
-            <input type="checkbox" id="mal-enabled" class="setting"/>
+            <input type="checkbox" id="mal-enabled" class="setting" permission="https://api.jikan.moe/*"/>
         </div>
     </div>
     <div>
         <h3>AniList</h3>
         <div>
             <label>Display AniList:</label>
-            <input type="checkbox" id="al-enabled" class="setting"/>
+            <input type="checkbox" id="al-enabled" class="setting" permission="https://graphql.anilist.co/*"/>
         </div>
     </div>
     <div>
         <h3>Rotten Tomatoes</h3>
         <div>
             <label>Display Rotten Tomatoes:</label>
-            <input type="checkbox" id="tomato-enabled" class="setting"/>
+            <input type="checkbox" id="tomato-enabled" class="setting" permission="https://www.rottentomatoes.com/*"/>
         </div>
         <div>
             <label>Default detail view:</label>
@@ -77,7 +77,7 @@
         <h3>Metacritic</h3>
         <div>
             <label>Display Metacritic:</label>
-            <input type="checkbox" id="metacritic-enabled" class="setting"/>
+            <input type="checkbox" id="metacritic-enabled" class="setting" permission="https://www.metacritic.com/*"/>
         </div>
         <div>
             <label>Default detail view:</label>
@@ -92,7 +92,7 @@
         <h3>SensCritique</h3>
         <div>
             <label>Display SensCritique:</label>
-            <input type="checkbox" id="senscritique-enabled" class="setting"/>
+            <input type="checkbox" id="senscritique-enabled" class="setting" permission="https://apollo.senscritique.com/*"/>
         </div>
     </div>
     <div>
@@ -106,7 +106,7 @@
         <h3>CinemaScore</h3>
         <div>
             <label>Display CinemaScore:</label>
-            <input type="checkbox" id="cinema-enabled" class="setting"/>
+            <input type="checkbox" id="cinema-enabled" class="setting" permission="https://api.cinemascore.com/*"/>
         </div>
     </div>
     <br>
