--- a/options.html
+++ b/options.html
@@ -90,14 +90,14 @@
         <h3>SensCritique</h3>
         <div>
             <label>Display SensCritique:</label>
-            <input type="checkbox" id="senscritique-enabled"/>
+            <input type="checkbox" id="senscritique-enabled" permission="https://apollo.senscritique.com/*"/>
         </div>
     </div>
     <div>
         <h3>MUBI</h3>
         <div>
             <label>Display MUBI:</label>
-            <input type="checkbox" id="mubi-enabled"/>
+            <input type="checkbox" id="mubi-enabled" permission="https://api.mubi.com/*"/>
         </div>
     </div>
     <div>
