Update options UI

--- a/options.html
+++ b/options.html
@@ -52,9 +52,11 @@
 
         a{
             color: rgb(51, 167, 255);
+            text-decoration: none;
         }
         a:hover{
             opacity: 50%;
+            text-decoration: underline;
         }
 
         label {
@@ -198,7 +200,7 @@
                 <option value="5">5-point scale</option>
                 <option value="10">10-point scale</option>
             </select>
-            <p>Converts ratings to different rating scales. Effects Letterboxd, IMDb, MyAnimeList, AniList, and Mubi.</p>
+            <p>Converts ratings to different rating scales. Affects Letterboxd, IMDb, MyAnimeList, AniList, and Mubi.</p>
         </div>
         <div>
             <label for="mpa-enabled">Display MPA film ratings:</label>
@@ -228,7 +230,7 @@
 
     <div>
         <div>
-            <a href="https://github.com/duncanlang/Letterboxd-Extras/issues" style="color: rgb(51, 167, 255);">Report an issue or submit a feature suggestion on Github</a>
+            <a href="https://github.com/duncanlang/Letterboxd-Extras/issues" style="color: rgb(51, 167, 255);">Report an issue or suggest a new feature on Github</a>
         </div>
     </div>
 
