Make sure convert-ratings 10 converts letterboxd

--- a/options.html
+++ b/options.html
@@ -230,7 +230,7 @@
 
     <div>
         <div>
-            <a href="https://github.com/duncanlang/Letterboxd-Extras/issues" style="color: rgb(51, 167, 255);">Report an issue or suggest a new feature on Github</a>
+            <a href="https://github.com/duncanlang/Letterboxd-Extras/issues" style="color: rgb(51, 167, 255);">Report an issue or suggest a new feature on GitHub</a>
         </div>
     </div>
 
