--- a/options.html
+++ b/options.html
@@ -46,12 +46,13 @@
             margin-top: 0px;
             font-style: italic;
             font-size: 11px;
-            width: 500px;
+            width: 95%;
             color: var(--body-text-alt-color);
         }
 
         a{
             color: rgb(51, 167, 255);
+            width: 95%;
             text-decoration: none;
         }
         a:hover{
