--- a/options.html
+++ b/options.html
@@ -15,6 +15,8 @@
             background-color: var(--body-back-color);
 
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+            width: 500px;
         }
 
         /* Color scheme */
