--- a/options.html
+++ b/options.html
@@ -215,6 +215,10 @@
             <label for="mojo-link-enabled">Display BoxOfficeMojo link:</label>
             <input type="checkbox" id="mojo-link-enabled" />
         </div>
+        <div>
+            <label for="wiki-link-enabled">Display Wikipedia link:</label>
+            <input type="checkbox" id="wiki-link-enabled" />
+        </div>
     </div>
 
     <hr width="100%">
