Options to replace 'fans' with rating count

--- a/options.html
+++ b/options.html
@@ -219,6 +219,14 @@
             <label for="wiki-link-enabled">Display Wikipedia link:</label>
             <input type="checkbox" id="wiki-link-enabled" />
         </div>
+        <div>
+            <label for="replace-fans">Replace 'Fans' with Rating Count:</label>
+            <select id="replace-fans">
+                <option value="false">Leave unchanged</option>
+                <option value="replace">Replace</option>
+                <option value="both">Side-by-side</option>
+            </select>
+        </div>
     </div>
 
     <hr width="100%">
