Add option to hide additional ratings by default

--- a/options.html
+++ b/options.html
@@ -227,6 +227,10 @@
                 <option value="both">Side-by-side</option>
             </select>
         </div>
+        <div>
+            <label for="hide-ratings-enabled">Hide additional ratings behind a 'Show More' button:</label>
+            <input type="checkbox" id="hide-ratings-enabled" />
+        </div>
     </div>
 
     <hr width="100%">
