Chrome fix for new option

--- a/options.html
+++ b/options.html
@@ -231,7 +231,7 @@
         </div>
         <div>
             <label for="hide-ratings-enabled">Hide additional ratings behind a 'Show More' button:</label>
-            <input type="checkbox" id="hide-ratings-enabled" />
+            <input type="checkbox" id="hide-ratings-enabled" class="setting"/>
         </div>
     </div>
 
