Rt button tweaks

--- a/options.html
+++ b/options.html
@@ -177,7 +177,7 @@
             <label style="color: red;">! Missing Permission !</label>
             <input type="button" id="senscritique-permissions" class="request-permission" permissionTarget="senscritique-enabled" value="Request Permission"/>
         </div>
-        <div id="sens-div">
+        <div id="sens-div" class="disabled">
             <div>
                 <label for="sens-favorites-enabled">Display recommended count:</label>
                 <input type="checkbox" id="sens-favorites-enabled" />
