Option to convert MPA ratings

--- a/options.html
+++ b/options.html
@@ -240,7 +240,11 @@
         </div>
         <div>
             <label for="mpa-enabled">Display MPA film ratings:</label>
-            <input type="checkbox" id="mpa-enabled" />
+            <input type="checkbox" id="mpa-enabled" subid="mpa-div" />
+        </div>
+        <div id="mpa-div">
+            <label for="mpa-convert">Convert historical MPA ratings to modern equivalent:</label>
+            <input type="checkbox" id="mpa-convert" />
         </div>
         <div>
             <label for="open-same-tab">Open 'More At' links in same tab:</label>
