--- a/options.html
+++ b/options.html
@@ -228,6 +228,20 @@
     <hr width="100%">
 
     <div>
+        <h3>Rankings</h3>
+        <div>
+            <label for="tspdt-enabled">Show "They Shoot Pictures, Don't They?" top 1000 rankings:</label>
+            <input type="checkbox" id="tspdt-enabled" permission="https://www.theyshootpictures.com/*" />
+        </div>
+        <div class="div-request-permission">
+            <label style="color: red;">! Missing Permission !</label>
+            <input type="button" id="tspdt-permissions" class="request-permission" permissionTarget="tspdt-enabled" value="Request Permission"/>
+        </div>
+    </div>
+
+    <hr width="100%">
+
+    <div>
         <h3>Misc</h3>
         <div>
             <label for="convert-ratings">Convert ratings:</label>
