Add BFI ranking

--- a/options.html
+++ b/options.html
@@ -237,6 +237,14 @@
             <label style="color: red;">! Missing Permission !</label>
             <input type="button" id="tspdt-permissions" class="request-permission" permissionTarget="tspdt-enabled" value="Request Permission"/>
         </div>
+        <div>
+            <label for="bfi-enabled">Show "BFI Sight and Sound" top 250 rankings:</label>
+            <input type="checkbox" id="bfi-enabled" permission="https://www.bfi.org.uk/*" />
+        </div>
+        <div class="div-request-permission">
+            <label style="color: red;">! Missing Permission !</label>
+            <input type="button" id="bfi-permissions" class="request-permission" permissionTarget="bfi-enabled" value="Request Permission"/>
+        </div>
     </div>
 
     <hr width="100%">
