Fix options page from Chrome

--- a/options.html
+++ b/options.html
@@ -233,7 +233,7 @@
         <h3>Rankings</h3>
         <div>
             <label for="tspdt-enabled">Show "They Shoot Pictures, Don't They?" top 1000 rankings:</label>
-            <input type="checkbox" id="tspdt-enabled" permission="https://www.theyshootpictures.com/*" />
+            <input type="checkbox" id="tspdt-enabled" permission="https://www.theyshootpictures.com/*" class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
@@ -241,7 +241,7 @@
         </div>
         <div>
             <label for="bfi-enabled">Show "BFI Sight and Sound" top 250 rankings:</label>
-            <input type="checkbox" id="bfi-enabled" permission="https://www.bfi.org.uk/*" />
+            <input type="checkbox" id="bfi-enabled" permission="https://www.bfi.org.uk/*" class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
