Settings for Allocine

--- a/options.html
+++ b/options.html
@@ -221,11 +221,28 @@
         <h3>AlloCiné</h3>
         <div>
             <label for="allocine-enabled">Display AlloCiné:</label>
-            <input type="checkbox" id="allocine-enabled" permission="https://www.allocine.fr/*" />
+            <input type="checkbox" id="allocine-enabled" permission="https://www.allocine.fr/*" subid="allo-div" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
             <input type="button" id="allocine-permissions" class="request-permission" permissionTarget="allocine-enabled" value="Request Permission"/>
+        </div>
+        <div id="allo-div" class="disabled">
+            <div>
+                <label for="allocine-users-enabled">Display user ratings:</label>
+                <input type="checkbox" id="allocine-users-enabled" />
+            </div>
+            <div>
+                <label for="allocine-critic-enabled">Display critic ratings:</label>
+                <input type="checkbox" id="allocine-critic-enabled" />
+            </div>
+            <div>
+                <label for="allocine-default-view">Default ratings view:</label>
+                <select id="allocine-default-view">
+                    <option value="user">User</option>
+                    <option value="critic">Critic</option>
+                </select>
+            </div>
         </div>
     </div>
     <div>
